# sudoku_solver

./: .gitignore  Dockerfile  README.md  buildozer.spec  pyproject.toml
.github/workflows/: release_apk.yml
keystore/: sudoku_solver.keystore
sudoku_solver/: interface.py  main.py  resolver.py  sudokusolver.kv
