[tool.poetry]
name = "sudoku-solver"
version = "1.0.0"
description = ""
authors = ["pgmystery"]
readme = "README.md"
packages = [{include = "sudoku_solver"}]

[tool.poetry.dependencies]
python = "^3.12"
kivy = {extras = ["base"], version = "^2.3.0"}


[tool.poetry.group.dev.dependencies]
buildozer = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
